# gym_track_core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: mypy  update-k8s-tag.sh
.github/workflows/: build.yaml  release.yaml
alembic/: env.py
alembic/versions/: 3e8d9c1193c8_rename_workout_table_and_model.py  5a6e345da6fe_exercise_and_workout_tables.py  fed9de2bd443_create_tables.py
app/: app.py  auth.py  exercise_results.py  exercises.py  main.py  sqlalchemy_async.py  sqlalchemy_sync_repository.py  user_auth.py  user_profile.py  week_plans.py  workouts.py
app/data/: default_exercises.json
app/llm/: claude_prompts.py
app/models/: exercises_and_workouts.py  models.py
deploy/manifests/: deployment.yaml  service.yaml
test/: conftest.py  test_app.py  test_exercises.py  test_main.py  test_user_profile.py  test_week_plans.py  test_workouts.py
test/data/: two_day_plan.json  two_day_plan_response.json
