[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "gym-track-core"
version = "0.6.3"
description = "Exposes an API for interacting with exercises and workouts"
readme = "README.md"
authors = [
  {name = "John Prater", email = "johnjaredprater@gmail.com"},
]

requires-python = ">= 3.12"

dependencies = [
  "litestar[standard]~=2.0",
  "firebase-admin~=6.5",
  "SQLAlchemy~=2.0",
  "mariadb~=1.1",
  "attrs~=24.0",
  "cattrs",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "firebase_admin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mariadb.*"
ignore_missing_imports = true
