[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "gym-track-core"
version = "1.0.0"
description = "Exposes an API for interacting with exercises and workouts"
readme = "README.md"
authors = [
  {name = "John Prater", email = "johnjaredprater@gmail.com"},
]

requires-python = ">= 3.12"

dependencies = [
  "litestar[standard, sqlalchemy]~=2.0",
  "firebase-admin~=6.5",
  "sqlalchemy[asyncio]~=2.0",
  "aiomysql~=0.2",
  "mariadb~=1.1",
  "attrs~=24.0",
  "pydantic~=2.9",
  "cattrs",
  "alembic~=1.13"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "firebase_admin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mariadb.*"
ignore_missing_imports = true
